Second upload of prod-ready app!
Handle reposition of miscalled pitches at locations in the corners. Handle pitcher change when opacity is 0 so it's not so visually jarring when it happens at same time as pitch animation and play call.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "webpack-dev-server"
   },
   "version": "1.0.0",
-  "description": "LeagueHut Baseball simulation",
+  "description": "Baseball simulation game created with AngularJS, Google Firebase, and Webpack",
   "author": "Ali Halim",
   "dependencies": {
     "@babel/core": "^7.4.3",
